--- a/docker-compose/docker-compose-slicing-basic-nrf.yaml
+++ b/docker-compose/docker-compose-slicing-basic-nrf.yaml
@@ -329,7 +329,7 @@ services:
             - oai_amf
             - oai_nrf_slice3
         extra_hosts:
-            - "gw1.vppupf.node.5gcn.mnc95.mcc208.3gppnetwork.org:192.168.70.202"
+            - "vpp-upf-slice3.node.5gcn.mnc95.mcc208.3gppnetwork.org:192.168.70.202"
         networks:
             public_net:
                 ipv4_address: 192.168.70.141
@@ -415,27 +415,29 @@ services:
             public_net:
                 ipv4_address: 192.168.70.143
     vpp_upf_slice3:
-        image: oai-upf-vpp:v1.4.0
+        image: oai-upf-vpp:develop # v1.4 does not support new configuration
         privileged: true
         container_name: vpp-upf-slice3
         environment:
-            - NWI_N3=access.oai.org
-            - NWI_N6=core.oai.org
-            - GW_ID=1
-            - MNC03=95
+            - IF_1_IP=192.168.70.202
+            - IF_1_TYPE=N4
+            - IF_2_IP=192.168.72.202
+            - IF_2_TYPE=N3
+            - IF_2_NWI=access.oai.org
+            - IF_3_IP=192.168.73.202
+            - IF_3_TYPE=N6
+            - IF_3_NWI=core.oai.org
+            - IF_3_IP_REMOTE=192.168.73.145 # EXT-DN (NAT Gateway) IP Address
+            - NAME=VPP-UPF-SLICE3
+            - MNC=95
             - MCC=208
             - REALM=3gppnetwork.org
-            - NETWORK_UE_IP=12.2.1.0/24
-            - N3_IPV4_ADDRESS_REMOTE=192.168.72.156 #   GNB  IP Address
-            - N6_IPV4_ADDRESS_REMOTE=192.168.73.145 # EXT-DN (NAT Gateway) IP Address
             - VPP_MAIN_CORE=0
             - VPP_CORE_WORKER=1
-            - VPP_PLUGIN_PATH=/usr/lib/x86_64-linux-gnu/vpp_plugins/
-            - INTERFACE_ACCESS=eth1
-            - INTERFACE_CORE=eth2
-            - INTERFACE_CP=eth0
-            - NSSAI_SD_0=130
-            - SST=130
+            # - VPP_PLUGIN_PATH=/usr/lib64/vpp_plugins/                # RHEL7
+            - VPP_PLUGIN_PATH=/usr/lib/x86_64-linux-gnu/vpp_plugins/ # Ubuntu18.04
+            - SNSSAI_SD=130
+            - SNSSAI_SST=130
             - DNN=oai.ipv4
             - REGISTER_NRF=yes
             - NRF_IP_ADDR=192.168.70.137
