--- a/docker-compose/docker-compose-basic-nonrf.yaml
+++ b/docker-compose/docker-compose-basic-nonrf.yaml
@@ -46,6 +46,13 @@ services:
         networks:
             public_net:
                 ipv4_address: 192.168.70.136
+        volumes:
+            - ./healthscripts/udr-healthcheck.sh:/openair-udr/bin/udr-healthcheck.sh
+        healthcheck:
+            test: /bin/bash -c "/openair-udr/bin/udr-healthcheck.sh"
+            interval: 10s
+            timeout: 5s
+            retries: 5
     oai-udm:
         container_name: "oai-udm"
         image: oai-udm:v1.4.0
@@ -70,6 +77,13 @@ services:
         networks:
             public_net:
                 ipv4_address: 192.168.70.137
+        volumes:
+            - ./healthscripts/udm-healthcheck.sh:/openair-udm/bin/udm-healthcheck.sh
+        healthcheck:
+            test: /bin/bash -c "/openair-udm/bin/udm-healthcheck.sh"
+            interval: 10s
+            timeout: 5s
+            retries: 5
     oai-ausf:
         container_name: "oai-ausf"
         image: oai-ausf:v1.4.0
@@ -93,6 +107,13 @@ services:
         networks:
             public_net:
                 ipv4_address: 192.168.70.138
+        volumes:
+            - ./healthscripts/ausf-healthcheck.sh:/openair-ausf/bin/ausf-healthcheck.sh
+        healthcheck:
+            test: /bin/bash -c "/openair-ausf/bin/ausf-healthcheck.sh"
+            interval: 10s
+            timeout: 5s
+            retries: 5
     oai-amf:
         container_name: "oai-amf"
         image: oai-amf:v1.4.0
@@ -144,7 +165,7 @@ services:
             - EXTERNAL_AUSF=yes
             - EXTERNAL_UDM=no
             - EXTERNAL_NSSF=no
-            - USE_HTTP2=no 
+            - USE_HTTP2=no
             - NRF_IPV4_ADDRESS=0.0.0.0 # not used in this scenario, can't remove
             - NRF_PORT=80 # not used in this scenario, can't remove
             - NRF_API_VERSION=v1 # not used in this scenario, can't remove
@@ -160,6 +181,13 @@ services:
         depends_on:
             - mysql
             - oai-ausf
+        volumes:
+            - ./healthscripts/amf-healthcheck.sh:/openair-amf/bin/amf-healthcheck.sh
+        healthcheck:
+            test: /bin/bash -c "/openair-amf/bin/amf-healthcheck.sh"
+            interval: 10s
+            timeout: 15s
+            retries: 5
         networks:
             public_net:
                 ipv4_address: 192.168.70.132
@@ -228,6 +256,13 @@ services:
             - oai-amf
         extra_hosts:
             - "oai-spgwu:192.168.70.134"
+        volumes:
+            - ./healthscripts/smf-healthcheck.sh:/openair-smf/bin/smf-healthcheck.sh
+        healthcheck:
+            test: /bin/bash -c "/openair-smf/bin/smf-healthcheck.sh"
+            interval: 10s
+            timeout: 5s
+            retries: 5
         networks:
             public_net:
                 ipv4_address: 192.168.70.133
@@ -281,6 +316,13 @@ services:
         cap_drop:
             - ALL
         privileged: true
+        volumes:
+            - ./healthscripts/spgwu-healthcheck.sh:/openair-spgwu-tiny/bin/spgwu-healthcheck.sh
+        healthcheck:
+            test: /bin/bash -c "/openair-spgwu-tiny/bin/spgwu-healthcheck.sh"
+            interval: 10s
+            timeout: 5s
+            retries: 5
         networks:
             public_net:
                 ipv4_address: 192.168.70.134
