--- a/docker-compose/docker-compose-mini-nonrf.yaml
+++ b/docker-compose/docker-compose-mini-nonrf.yaml
@@ -66,8 +66,8 @@ services:
             - MYSQL_DB=oai_db
             - NRF_IPV4_ADDRESS=0.0.0.0
             - NRF_PORT=80
-            - EXTERNAL_NRF=no
-            - NF_REGISTRATION=no
+            - ENABLE_STATIC_NRF=no
+            - NRF_SELECTION=no
             - SMF_SELECTION=no
             - USE_FQDN_DNS=yes
             - EXTERNAL_AUSF=no
