--- a/docker-compose/docker-compose-basic-nrf-http2.yaml
+++ b/docker-compose/docker-compose-basic-nrf-http2.yaml
@@ -164,13 +164,13 @@ services:
             - MYSQL_DB=oai_db
             - NRF_IPV4_ADDRESS=192.168.70.130
             - NRF_PORT=8080
-            - EXTERNAL_NRF=no
-            - NF_REGISTRATION=yes
+            - ENABLE_STATIC_NRF=yes
+            - NRF_SELECTION=yes
             - SMF_SELECTION=yes
             - USE_FQDN_DNS=yes
             - EXTERNAL_AUSF=yes
             - EXTERNAL_UDM=no
-            - EXTERNAL_NSSF=no
+            - ENABLE_NSSF=no
             - NRF_API_VERSION=v1
             - NRF_FQDN=oai-nrf
             - AUSF_IPV4_ADDRESS=192.168.70.138
