--- a/docker-compose/docker-compose-mini-nrf.yaml
+++ b/docker-compose/docker-compose-mini-nrf.yaml
@@ -79,13 +79,13 @@ services:
             - MYSQL_DB=oai_db
             - NRF_IPV4_ADDRESS=192.168.70.130
             - NRF_PORT=80
-            - EXTERNAL_NRF=no
-            - NF_REGISTRATION=yes
+            - ENABLE_STATIC_NRF=yes
+            - NRF_SELECTION=yes
             - SMF_SELECTION=yes
             - USE_FQDN_DNS=yes
             - EXTERNAL_AUSF=no
             - EXTERNAL_UDM=no
-            - EXTERNAL_NSSF=no
+            - ENABLE_NSSF=no
             - USE_HTTP2=no
             - NRF_API_VERSION=v1
             - NRF_FQDN=oai-nrf
