--- a/docker-compose/docker-compose-basic-vpp-nrf-http2.yaml
+++ b/docker-compose/docker-compose-basic-vpp-nrf-http2.yaml
@@ -142,10 +142,12 @@ services:
             - PLMN_SUPPORT_MCC=208
             - PLMN_SUPPORT_MNC=95
             - PLMN_SUPPORT_TAC=0xa000
-            - SST_0=222
-            - SD_0=123
+            - SST_0=1
+            - SD_0=0xFFFFFF
             - SST_1=1
-            - SD_1=12
+            - SD_1=1
+            - SST_2=222
+            - SD_2=123
             - AMF_INTERFACE_NAME_FOR_NGAP=eth0
             - AMF_INTERFACE_NAME_FOR_N11=eth0
             - SMF_INSTANCE_ID_0=1
@@ -169,6 +171,8 @@ services:
             - SMF_SELECTION=yes
             - USE_FQDN_DNS=yes
             - EXTERNAL_AUSF=yes
+            - EXTERNAL_UDM=no
+            - EXTERNAL_NSSF=no
             - NRF_API_VERSION=v1
             - NRF_FQDN=oai-nrf
             - AUSF_IPV4_ADDRESS=192.168.70.138
@@ -211,23 +215,46 @@ services:
             - UDM_PORT=8080
             - UDM_API_VERSION=v2
             - UDM_FQDN=oai-udm
-            - UPF_IPV4_ADDRESS=192.168.70.202
-            - UPF_FQDN_0=gw1.vppupf.node.5gcn.mnc95.mcc208.3gppnetwork.org
+            - UPF_IPV4_ADDRESS=192.168.70.201
+            - UPF_FQDN_0=vpp-upf.node.5gcn.mnc95.mcc208.3gppnetwork.org
             - NRF_IPV4_ADDRESS=192.168.70.130
             - NRF_PORT=8080
             - NRF_API_VERSION=v1
+            - DEFAULT_CSCF_IPV4_ADDRESS=127.0.0.1  # only needed when ims is being used
+            - USE_LOCAL_SUBSCRIPTION_INFO=yes  #Set to yes if SMF uses local subscription information instead of from an UDM
             - NRF_FQDN=oai-nrf
             - REGISTER_NRF=yes
             - DISCOVER_UPF=yes
             - USE_FQDN_DNS=yes
-            - USE_NETWORK_INSTANCE=yes
-            - DNN_RANGE1=12.1.1.2 - 12.1.1.128
-            - DNN_RANGE0=12.2.1.2 - 12.2.1.128
-            - DNN_NI1=default
             - HTTP_VERSION=2
+            - USE_NETWORK_INSTANCE=yes
             - ENABLE_USAGE_REPORTING=yes
+            - DNN_NI0=oai
+            - TYPE0=IPv4
+            - DNN_RANGE0=12.1.1.151 - 12.1.1.253
+            - NSSAI_SST0=1
+            - NSSAI_SD0=0xFFFFFF
+            - SESSION_AMBR_UL0=200Mbps
+            - SESSION_AMBR_DL0=400Mbps
+            - DNN_NI1=oai.ipv4
+            - TYPE1=IPv4
+            - DNN_RANGE1=12.1.1.51 - 12.1.1.150
+            - NSSAI_SST1=1
+            - NSSAI_SD1=1
+            - SESSION_AMBR_UL1=100Mbps
+            - SESSION_AMBR_DL1=200Mbps
+            - DNN_NI2=default
+            - TYPE2=IPv4
+            - DNN_RANGE2=12.1.1.2 - 12.1.1.50
+            - NSSAI_SST2=222
+            - NSSAI_SD2=123
+            - SESSION_AMBR_UL2=50Mbps
+            - SESSION_AMBR_DL2=100Mbps
+            - DNN_NI3=ims
+            - TYPE3=IPv4v6
+            - DNN_RANGE3=14.1.1.2 - 14.1.1.253
         extra_hosts:
-            - "gw1.vppupf.node.5gcn.mnc95.mcc208.3gppnetwork.org:192.168.70.202"
+            - "vpp-upf.node.5gcn.mnc95.mcc208.3gppnetwork.org:192.168.70.201"
         depends_on:
             - oai-amf
         networks:
@@ -238,23 +265,25 @@ services:
         container_name: "vpp-upf"
         image: oaisoftwarealliance/oai-upf-vpp:v1.5.0
         environment:
-            - NWI_N3=access.oai.org
-            - NWI_N6=core.oai.org
-            - GW_ID=1
-            - MNC03=95
+            - IF_1_IP=192.168.70.201
+            - IF_1_TYPE=N4
+            - IF_2_IP=192.168.72.201
+            - IF_2_TYPE=N3
+            - IF_2_NWI=access.oai.org
+            - IF_3_IP=192.168.73.201
+            - IF_3_TYPE=N6
+            - IF_3_NWI=core.oai.org
+            - IF_3_IP_REMOTE=192.168.73.135 # EXT-DN IP Address
+            - NAME=VPP-UPF
+            - MNC=95
             - MCC=208
             - REALM=3gppnetwork.org
-            - NETWORK_UE_IP=12.1.1.0/24
-            - N6_IPV4_ADDRESS_REMOTE=192.168.73.135 # EXT-DN (NAT Gateway) IP Address
             - VPP_MAIN_CORE=0
             - VPP_CORE_WORKER=1
 #           - VPP_PLUGIN_PATH=/usr/lib64/vpp_plugins/                # RHEL7
             - VPP_PLUGIN_PATH=/usr/lib/x86_64-linux-gnu/vpp_plugins/ # Ubntu18.04
-            - INTERFACE_ACCESS=eth1
-            - INTERFACE_CORE=eth2
-            - INTERFACE_CP=eth0
-            - NSSAI_SD_0=123
-            - SST=222
+            - SNSSAI_SD=123
+            - SNSSAI_SST=222
             - DNN=default
             - REGISTER_NRF=yes
             - NRF_IP_ADDR=192.168.70.130
@@ -281,7 +310,7 @@ services:
         image: oaisoftwarealliance/trf-gen-cn5g:latest
         entrypoint: /bin/bash -c \
               "iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE;"\
-              "ip route add 12.1.1.0/24 via 192.168.73.202 dev eth0; ip route; sleep infinity"
+              "ip route add 12.1.1.0/24 via 192.168.73.201 dev eth0; ip route; sleep infinity"
         command: ["/bin/bash", "-c", "trap : SIGTERM SIGINT; sleep infinity & wait"]
         healthcheck:
             test: /bin/bash -c "iptables -L -t nat | grep MASQUERADE"
@@ -313,4 +342,4 @@ networks:
             config:
                 - subnet: 192.168.73.0/24
         driver_opts:
-                com.docker.network.bridge.name: "cn5g-core"
+            com.docker.network.bridge.name: "cn5g-core"
