--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -54,6 +54,8 @@ oai-ausf:
     pullPolicy: IfNotPresent
   imagePullSecrets:
     - name: "regcred"
+  securityContext:
+    privileged: false
   nodeSelector: {}
 oai-amf:
   enabled: true
@@ -66,6 +68,8 @@ oai-amf:
     pullPolicy: IfNotPresent
   imagePullSecrets:
     - name: "regcred"
+  securityContext:
+    privileged: false
   multus:
     create: false
     n2IPadd: "172.21.6.200"
@@ -102,6 +106,8 @@ oai-spgwu-tiny:
     pullPolicy: IfNotPresent
   imagePullSecrets:
     - name: "regcred"
+  securityContext:
+    privileged: false
   multus:
     create: false
     n3Ip: "172.21.6.201"
@@ -140,6 +146,8 @@ oai-smf:
     pullPolicy: IfNotPresent
   imagePullSecrets:
     - name: "regcred"
+  securityContext:
+    privileged: false
   config:
     useLocalSubscriptionInfo: "no" #this means ip-address information will be fetched from UDR
     ueMtu: 1500
