--- a/charts/oai-5g-core/oai-smf/templates/configmap.yaml
+++ b/charts/oai-5g-core/oai-smf/templates/configmap.yaml
@@ -9,6 +9,7 @@ data:
         FQDN          = "oai-smf";
         INSTANCE      = 0;         # 0 is the default
         PID_DIRECTORY = "/var/run";  # /var/run is the default
+        LOG_LEVEL = "{{ .Values.config.logLevel }}";
 
         INTERFACES :
         {
