--- a/charts/oai-5g-core/oai-amf/values.yaml
+++ b/charts/oai-5g-core/oai-amf/values.yaml
@@ -86,7 +86,7 @@ config:
   mySqlUser: "root" # OPTIONAL: used only if not using AUSF
   mySqlPass: "linux" # OPTIONAL: used only if not using AUSF
   mySqlDb: "oai_db" # OPTIONAL: used only if not using AUSF
-
+  logLevel: "info"
 
 persistent:
   sharedvolume: false
