--- a/charts/oai-5g-core/oai-amf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-amf/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
         k8s.v1.cni.cncf.io/networks: >-
           [{
                  "name": "{{ .Chart.Name }}-n2-net1",
+                 "mac": "12:34:56:78:90:00",
                  "default-route": ["{{ .Values.multus.n2Gateway }}"]
           }]
     {{- end }}
