Updating gNB and nr-ue dockerfiles

--- a/openshift/oai-gnb-build-config.yaml
+++ b/openshift/oai-gnb-build-config.yaml
@@ -61,14 +61,12 @@ spec:
                 libX11 \
                 atlas \
                 lksctp-tools \
-                nettle \
                 tzdata \
                 gdb \
                 python3 \
                 python3-pip \
                 net-tools \
-                iputils \
-                libyaml && \
+                iputils && \
             pip3 install six && \
             pip3 install requests && \
             echo "/usr/local/lib" > /etc/ld.so.conf.d/local-lib.conf && \
@@ -92,6 +90,7 @@ spec:
             /oai-ran/cmake_targets/ran_build/build/libldpc_optim8seg.so \
             /oai-ran/cmake_targets/ran_build/build/libldpc_orig.so \
             /oai-ran/cmake_targets/ran_build/build/libtelnetsrv.so \
+            /oai-ran/cmake_targets/ran_build/build/libtelnetsrv_ci.so \
             /usr/local/lib/
 
         COPY --from=gnb-base \
@@ -118,8 +117,7 @@ spec:
 
         # Now we are copying from builder-image the UHD files.
         COPY --from=gnb-base /usr/local/bin/uhd_find_devices /usr/local/bin
-        COPY --from=gnb-base /usr/lib64/libprotobuf-c.so.1 /usr/local/lib
-        COPY --from=gnb-base /usr/local/lib64/libuhd.so.3.15.0 /usr/local/lib64
+        COPY --from=gnb-base /usr/local/lib64/libuhd.so.4.4.0 /usr/local/lib64
         COPY --from=gnb-base /usr/local/lib64/uhd/utils/uhd_images_downloader.py /opt/oai-gnb/bin
 
         WORKDIR /usr/local/share/uhd/rfnoc
@@ -133,12 +131,6 @@ spec:
         COPY --from=gnb-build /oai-ran/docker/etc .
 
         WORKDIR /opt/oai-gnb
-        #EXPOSE 2152/udp  # S1U, GTP/UDP
-        #EXPOSE 22100/tcp # ?
-        #EXPOSE 36412/udp # S1C, SCTP/UDP
-        #EXPOSE 36422/udp # X2C, SCTP/UDP
-        #EXPOSE 50000/udp # IF5 / ORI (control)
-        #EXPOSE 50001/udp # IF5 / ECPRI (data)
 
         ENTRYPOINT ["/opt/oai-gnb/bin/entrypoint.sh"]
         CMD ["/opt/oai-gnb/bin/nr-softmodem", "-O", "/opt/oai-gnb/etc/gnb.conf"]
