--- a/openshift/oai-nr-ue-build-config.yaml
+++ b/openshift/oai-nr-ue-build-config.yaml
@@ -58,7 +58,6 @@ spec:
                 lksctp-tools \
                 procps-ng \
                 tzdata \
-                nettle \
                 net-tools \
                 iputils \
                 iproute \
@@ -67,8 +66,7 @@ spec:
                 python3 \
                 python3-pip \
                 libXpm \
-                libX11 \
-                libyaml && \
+                libX11 && \
             pip3 install six && \
             pip3 install requests && \
             echo "/usr/local/lib" > /etc/ld.so.conf.d/local-lib.conf && \
@@ -125,8 +123,7 @@ spec:
 
         # Now we are copying from builder-image the UHD files.
         COPY --from=nr-ue-base /usr/local/bin/uhd_find_devices /usr/local/bin
-        COPY --from=nr-ue-base /usr/lib64/libprotobuf-c.so.1 /usr/local/lib
-        COPY --from=nr-ue-base /usr/local/lib64/libuhd.so.3.15.0 /usr/local/lib64
+        COPY --from=nr-ue-base /usr/local/lib64/libuhd.so.4.4.0 /usr/local/lib64
         COPY --from=nr-ue-base /usr/local/lib64/uhd/utils/uhd_images_downloader.py /opt/oai-nr-ue/bin
 
         WORKDIR /usr/local/share/uhd/rfnoc
